added requested changes